k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openclimate-api-deployment
  labels:
    app: openclimate-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: openclimate-api
  template:
    metadata:
      labels:
        app: openclimate-api
    spec:
      containers:
      - name: openclimate-api
        image: public.ecr.aws/openearthfoundation/openclimate-api
        imagePullPolicy: Always
        ports:
        - containerPort: 3100
        resources:
          limits:
            memory: "64Mi"
            cpu: "256m"
