k8s/logstash-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openclimate-logstash-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openclimate-logstash
  template:
    metadata:
      labels:
        app: openclimate-logstash
    spec:
      containers:
        - name: openclimate-logstash
          image: public.ecr.aws/openearthfoundation/logstash-postgresql
          resources:
            limits:
              memory: "1000Mi"
              cpu: "1000m"
          volumeMounts:
            - name: openclimate-logstash-pipeline-volume
              mountPath: /usr/share/logstash/pipeline/
      volumes:
        - name: openclimate-logstash-pipeline-volume
          configMap:
            name: openclimate-logstash-pipeline
