k8s/openclimate-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openclimate-api-deployment
  labels:
    app: openclimate-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openclimate-api
  template:
    metadata:
      labels:
        app: openclimate-api
    spec:
      containers:
      - name: openclimate-api
        image: public.ecr.aws/openearthfoundation/openclimate-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3100
        resources:
          limits:
            memory: "1024Mi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /api/second-controller
            port: 3100
            httpHeaders:
            - name: X-Liveness-Probe
              value: "True"
          initialDelaySeconds: 60
          periodSeconds: 30
