k8s/openclimate-elasticsearch-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openclimate-elasticsearch-deployment
  labels:
    app: openclimate-elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openclimate-elasticsearch
  template:
    metadata:
      labels:
        app: openclimate-elasticsearch
    spec:
      volumes:
        - name: openclimate-elasticsearch-data
          persistentVolumeClaim:
            claimName: openclimate-elasticsearch-persistentvolumeclaim
      containers:
        - name: openclimate-elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:8.15.0
          imagePullPolicy: Always
          ports:
            - containerPort: 9200
          resources:
            limits:
              memory: "1024Mi"
              cpu: "1000m"
          volumeMounts:
            - mountPath: "/usr/share/elasticsearch/data"
              name: openclimate-elasticsearch-data
