k8s/openclimate-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: openclimate-api-service
spec:
  selector:
    app: openclimate-api
  ports:
    - name: openclimate-api-service-port
      protocol: TCP
      port: 3100
      targetPort: 3100
