k8s/kibana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openclimate-kibana-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - localhost
    secretName: localhost-secret
  rules:
    - host: localhost
      http:
        paths:
          - path: /kibana
            pathType: Prefix
            backend:
              service:
                name: openclimate-kibana-service
                port:
                  number: 5601
